[iOS] Should create IOSUserEventService as soon as possible

IOSUserEventService is not synchronous. To avoid to have the DCHECK in
ConsentAuditor::RecordGaiaConsent() failing, this service should be
created as soon as possible, to make sure it is correctly initialized
before using it.
With this fix, it is now possible to put back the DCHECK in
ConsentAuditor::RecordGaiaConsent().

Bug: 819176
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I66be7843eb3cc73686c07b0ffdee232c90dad7dd
Reviewed-on: https://chromium-review.googlesource.com/951484
Commit-Queue: Jérôme Lebel <jlebel@chromium.org>
Reviewed-by: Martin Šrámek <msramek@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541123}