components/consent_auditor/consent_auditor.cc
@@ -9,7 +9,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/metrics/histogram_macros.h"
 #include "base/values.h"
-#include "build/build_config.h"
 #include "components/consent_auditor/pref_names.h"
 #include "components/prefs/pref_registry_simple.h"
 #include "components/prefs/pref_service.h"
@@ -112,14 +111,10 @@ void ConsentAuditor::RecordGaiaConsent(
   // FakeUserEventService doesn't have a sync bridge.
   // TODO(crbug.com/709094, crbug.com/761485): Remove this check when the store
   // initializes synchronously and is instantly ready to receive data.
-#if !defined(OS_IOS)
-  // TODO(crbug.com/819176): On iOS the sync is may not be ready if the user
-  // taps on "OK GOT IT" button too fast.
   DCHECK(!user_event_service_->GetSyncBridge() ||
          user_event_service_->GetSyncBridge()
              ->change_processor()
              ->IsTrackingMetadata());
-#endif
   user_event_service_->RecordUserEvent(std::move(specifics));
 }
 
